Some fixes on mobiles.

--- a/styles/banner-cv.css
+++ b/styles/banner-cv.css
@@ -14,6 +14,9 @@
   color: inherit;
   text-decoration: inherit;
   box-shadow: 0px 0px 0px 2px var(--color-gray-200);
+  z-index: 100;
+
+  -webkit-tap-highlight-color: transparent;
 }
 
 .banner-cv__button:hover {
@@ -48,6 +51,7 @@
   pointer-events: none;
   background-size: cover;
   background-position: center top;
+  z-index: 50;
 }
 
 .banner-cv__button:hover .banner-cv__label {
